Bug 1213811 Include TavultesoftKeyman 90 and 80 to the whitelist of the fix of bug 1208043 r=emk a=sylvestre